# micromega-plugin

./: .gitignore  README.md  dune-project  micromega-plugin.opam
.github/workflows/: nix-action-rocq-9.0.yml  nix-action-rocq-9.1.yml  nix-action-rocq-master.yml
.nix/: config.nix  coq-nix-toolbox.nix
src/: certificate.ml  coq_micromega.ml  dune
theories/: NatDef.v  PosDef.v  RatDef.v  checker.v  dune  eval.v  field_checker.v  field_eval.v  formula.v  ring_checker.v  ring_eval.v  tactics.v  witness.v
