(library
 (name micromega_ml_plugin)
 (public_name micromega-plugin.plugin)
 (flags :standard -w -27)
 (preprocess
  (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~rocq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac rocq-runtime.vernac))

(coq.pp
 (modules g_micromega))
